jump to editor mode, not to welcome page

--- a/static/changed.html
+++ b/static/changed.html
@@ -7,10 +7,10 @@
     <title>AsciiDoc Scratch-Pad</title>
 </head>
 <body>
-Contents changed in different browser window. <a href="/">Return to editor</a>
+Contents changed in different browser window. <a href="/#/edit">Return to editor</a>
 <script>
     window.onfocus = function () {
-        window.location.href = '/'
+        window.location.href = '/#/edit'
     }
 </script>
 </body>
