--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>AsciiDoc Scratch-Pad</title>
+    <title>AsciiDoc Editor</title>
   </head>
   <body>
     <div id="app"></div>
