moving to vue-cli to use test harness

--- a/public/changed.html
+++ b/public/changed.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>AsciiDoc Scratch-Pad</title>
+    <link rel="icon" href="/favicon.ico">
+    <title>asciidoc-editor</title>
 </head>
 <body>
 Contents changed in different browser window. <a href="/">Return to editor</a>
