restore active scratch

--- a/public/changed.html
+++ b/public/changed.html
@@ -11,7 +11,7 @@
 Contents changed in different browser window. <a href="/">Return to editor</a>
 <script>
     window.onfocus = function () {
-        window.location.href = '/'
+        window.location.href = '/#/restore'
     }
 </script>
 </body>
