--- a/public/changed.html
+++ b/public/changed.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/favicon.ico">
-    <title>asciidoc-editor</title>
+    <title>Anita: Web Editor for AsciiDoc</title>
 </head>
 <body>
 Contents changed in different browser window. <a href="/">Return to editor</a>
