--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- static import due to https://github.com/Mogztter/asciidoctor-kroki/issues/317 -->
+    <script src="/asciidoctor-kroki.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
